# wal

./: .gitignore  MODULE.bazel  go.mod  go.sum
cmd/simplewal/: BUILD.bazel  main.go
examples/: BUILD.bazel
examples/basic/: BUILD  main.go  main_test.go
github.com/shohagrana006/simplewal/pkg/api/: wal.pb.go  wal_grpc.pb.go
internal/storage/: BUILD.bazel  storage.data
internal/wal/: BUILD  readwrite.go  wal.go  wal_test.go
pkg/api/: wal.pb.go  wal_grpc.pb.go
pkg/api/user/: BUILD.bazel  user.pb.go
pkg/api/wal/: BUILD.bazel  wal.pb.go  wal_grpc.pb.go
proto/: BUILD  BUILD.bazel  user.proto  wal.proto
scripts/: generate.sh
