load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_test")

go_binary(
    name = "client",
    srcs = ["main.go"],
    importpath = "github.com/shohagrana006/simplewal/examples/basic",
    deps = ["//proto:wal_go_proto"],
)

go_test(
    name = "main_test",
    srcs = ["main_test.go"],
    importpath = "github.com/shohagrana006/simplewal/examples/basic",
    deps = ["//proto:wal_go_proto"],
)

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "wal_lib",
    srcs = [
        "internal/wal/wal.go",
    ],
    importpath = "simplewal/internal/wal",
    visibility = ["//visibility:public"],
)

go_test(
    name = "wal_test",
    srcs = ["internal/wal/wal_test.go"],
    importpath = "simplewal/cmd/simplewal",
    visibility = ["//visibility:public"],
    deps = [":wal_lib"],
)
