load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "user",
    srcs = ["user.pb.go"],
    importpath = "github.com/shohagrana006/simplewal/pkg/api/user",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
